# I3M-Engine-Core

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE.md  README.md  build.rs  check_publish_status.sh  module_publish_status.txt  pm_settings.ron  publish.sh  publish_i3m_modules.sh  rename_folders.sh
.github/: FUNDING.yml
.github/workflows/: ci.yml  (+5 more)
I3M-Project-Manager/: Cargo.toml  README.md
I3M-Project-Manager/src/: build.rs  main.rs  project.rs  utils.rs
editor/: .gitignore  Cargo.toml  README.md
editor-standalone/: Cargo.toml  LICENSE  README.md
editor-standalone/src/: main.rs
editor/resources/shaders/: gizmo.shader  grid.shader  sprite_gizmo.shader
editor/src/: build.rs  configurator.rs  curve_editor.rs  export.rs  gui.rs  highlight.rs  lib.rs  light.rs  log.rs  material.rs  mesh.rs  message.rs  overlay.rs  particle.rs  plugin.rs  preview.rs  stats.rs
editor/src/absm/: blendspace.rs  canvas.rs  connection.rs  mod.rs  node.rs  parameter.rs  segment.rs  selectable.rs  selection.rs  socket.rs  toolbar.rs  transition.rs
editor/src/absm/command/: blend.rs  mod.rs
editor/src/absm/state_graph/: context.rs  mod.rs
editor/src/absm/state_viewer/: context.rs  mod.rs
editor/src/animation/: mod.rs  ruler.rs  selection.rs  thumb.rs  toolbar.rs  track.rs
editor/src/animation/command/: mod.rs
editor/src/asset/: dependency.rs  item.rs  mod.rs
editor/src/asset/inspector/: mod.rs
editor/src/asset/preview/: cache.rs  mod.rs
editor/src/audio/: bus.rs  mod.rs  preview.rs
editor/src/camera/: mod.rs  panel.rs
editor/src/command/: mod.rs  panel.rs
editor/src/inspector/: mod.rs
editor/src/inspector/editors/: animation.rs  font.rs  handle.rs  material.rs  mod.rs  resource.rs  script.rs  surface.rs  texture.rs
editor/src/inspector/editors/spritesheet/: mod.rs  window.rs
editor/src/inspector/handlers/node/: mod.rs
editor/src/interaction/: mod.rs  move_mode.rs  plane.rs  rotate_mode.rs  scale_mode.rs  select_mode.rs  terrain.rs
editor/src/interaction/gizmo/: move_gizmo.rs  rotate_gizmo.rs  scale_gizmo.rs
editor/src/interaction/navmesh/: mod.rs  selection.rs
editor/src/menu/: animation.rs  create.rs  dim2.rs  edit.rs  file.rs  help.rs  mod.rs  physics.rs  physics2d.rs  ui.rs  utils.rs  view.rs
editor/src/physics/: mod.rs
editor/src/plugins/collider/: ball.rs  ball2d.rs  capsule.rs  capsule2d.rs  cone.rs  cuboid.rs  cuboid2d.rs  cylinder.rs  dummy.rs  mod.rs  segment.rs  segment2d.rs  triangle.rs  triangle2d.rs
editor/src/plugins/tilemap/: commands.rs  mod.rs  palette.rs  panel.rs  preview.rs  tile_set_import.rs  tileset.rs
editor/src/scene/: clipboard.rs  container.rs  controller.rs  dialog.rs  mod.rs  property.rs  selector.rs
editor/src/scene/commands/: effect.rs  graph.rs  material.rs  mesh.rs  mod.rs  navmesh.rs  sound_context.rs  terrain.rs
editor/src/scene/settings/: mod.rs
editor/src/scene_viewer/: gizmo.rs  mod.rs
editor/src/settings/: build.rs  camera.rs  debugging.rs  general.rs  graphics.rs  keys.rs  mod.rs  model.rs  move_mode.rs  navmesh.rs  recent.rs  rotate_mode.rs  scene.rs  selection.rs  windows.rs
editor/src/ui_scene/: clipboard.rs  menu.rs  mod.rs  selection.rs  utils.rs
editor/src/ui_scene/commands/: graph.rs  mod.rs  widget.rs
editor/src/ui_scene/interaction/: mod.rs  move_mode.rs
editor/src/utils/: doc.rs  mod.rs  path_fixer.rs  ragdoll.rs
editor/src/world/: mod.rs
editor/src/world/graph/: item.rs  menu.rs  mod.rs  selection.rs
examples/: 2d.rs  navmesh.rs
i3m/: Cargo.toml  README.md
i3m-animation/: Cargo.toml  LICENSE  README.md
i3m-animation/src/: lib.rs  signal.rs  value.rs
i3m-animation/src/machine/: layer.rs  mod.rs  parameter.rs  state.rs  transition.rs
i3m-animation/src/machine/node/: blend.rs  blendspace.rs
i3m-animation/src/spritesheet/: mod.rs  signal.rs
i3m-core/: Cargo.toml  LICENSE  README.md
i3m-core-derive/: Cargo.toml  README.md
i3m-core-derive/src/: lib.rs
i3m-core-derive/tests/it/: component.rs  reflect.rs  uuid.rs  visit.rs
i3m-core-derive/tests/it/visit/: basic.rs  compat.rs
i3m-dylib/: Cargo.toml  README.md
i3m-dylib/src/: lib.rs
i3m-graph/: Cargo.toml  README.md
i3m-graph/src/: lib.rs
i3m-impl/: Cargo.toml  README.md
i3m-math/: Cargo.toml
i3m-resource/: Cargo.toml
i3m-resource/src/: constructor.rs  graph.rs  io.rs  lib.rs  loader.rs  manager.rs  state.rs  untyped.rs
i3m-scripts/: Cargo.toml
i3m-scripts/src/: camera.rs  lib.rs
i3m-sound/: Cargo.toml  README.md
i3m-sound/examples/: hrtf.rs  listener.rs  play_sound.rs  play_spatial_sound.rs  raw_samples.rs  raw_streaming.rs  reverb.rs  streaming.rs  write_wav.rs
i3m-sound/src/: bus.rs  context.rs  engine.rs  lib.rs  listener.rs  source.rs
i3m-sound/src/buffer/: generic.rs  loader.rs  mod.rs  streaming.rs
i3m-sound/src/dsp/: filters.rs  mod.rs
i3m-sound/src/effects/: filter.rs  mod.rs  reverb.rs
i3m-sound/src/renderer/: hrtf.rs  mod.rs
i3m-ui/: Cargo.toml  README.md
i3m-ui/src/: absm.rs  alignment.rs  animation.rs  bit.rs  border.rs  brush.rs  build.rs  button.rs  canvas.rs  check_box.rs  control.rs  decorator.rs  draw.rs  dropdown_list.rs  expander.rs  formatted_text.rs  grid.rs  image.rs  key.rs  lib.rs  list_view.rs  loader.rs  menu.rs  message.rs  messagebox.rs  navigation.rs  nine_patch.rs  numeric.rs  path.rs  popup.rs  progress_bar.rs  range.rs  rect.rs  screen.rs  scroll_bar.rs  scroll_panel.rs  scroll_viewer.rs  searchbar.rs  stack_panel.rs  tab_control.rs  (+8 more)
i3m-ui/src/color/: gradient.rs  mod.rs
i3m-ui/src/curve/: mod.rs
i3m-ui/src/dock/: config.rs  mod.rs  tile.rs
i3m-ui/src/file_browser/: menu.rs  mod.rs  selector.rs
i3m-ui/src/font/: loader.rs  mod.rs
i3m-ui/src/inspector/: mod.rs
i3m-ui/src/inspector/editors/: array.rs  bit.rs  collection.rs  enumeration.rs  immutable_string.rs  inherit.rs  inspectable.rs  mod.rs  refcell.rs
i3m-ui/src/node/: constructor.rs  mod.rs
i3m/src/: lib.rs
template/: Cargo.toml  README.md
template-core/: Cargo.toml  README.md
template-core/src/: lib.rs
template/src/: main.rs
(+100 files in other folders)
