[workspace]
members = [
    "i3m-core-derive",
    "i3m-core",
    "i3m-sound",
    "i3m-ui",
    "i3m-resource",
    "i3m-scripts",
    "i3m-animation",
	"editor",
    "editor-standalone",
	"template-core",
	"template",
    "i3m-graph",
    "i3m-math",
    "i3m-dylib",
    "i3m",
    "i3m-impl"
, "I3M-Project-Manager"]
resolver = "2"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
debug = true

[profile.github-ci]
inherits = "dev"
strip = "symbols"
debug = false
opt-level = 3
