[package]
name = "I3M-Engine-Core"
version = "0.17.0"
license = "MIT"
authors = ["Dedan Okware <softengdedan@gmail.com>"]
edition = "2021"
rust-version = "1.72"
description = "A standalone scene editor for IThreeM game engine"
homepage = "https://github.com/IThreeM/I3M-Engine-Core"
keywords = ["i3m", "editor", "rust"]
repository = "https://github.com/IThreeM/I3M-Engine-Core"
readme = "README.md"
include = ["/src/**/*", "/Cargo.toml", "/LICENSE", "/README.md"]

[dependencies]
i3m = "0.34.0"
i3m_engine_core_base = "0.21.1"
clap = { version = "4", features = ["derive"] }
