[package]
name = "I3M-Engine-Core"
version = "0.17.0"
license = "MIT"
authors = ["Dedan Okware <softengdedan@gmail.com>"]
edition = "2021"
rust-version = "1.72"
description = "A standalone scene editor for IThreeM game engine"
keywords = ["i3m", "editor", "rust"]
readme = "README.md"
include = ["/src/**/*", "/Cargo.toml", "/LICENSE", "/README.md"]

[dependencies]
i3m = "0.34.1"
i3m_engine_core_base = "0.21.2"
clap = { version = "4", features = ["derive"] }
