[package]
name = "I3M-Engine-Core"
version = "0.17.0"
license = "MIT"
authors = ["Dedan Okware <softengdedan@gmail.com>"]
edition = "2021"
rust-version = "1.72"
description = "A standalone scene editor for IThreeM game engine"
keywords = ["i3m", "editor", "rust"]
readme = "README.md"
include = ["/src/**/*", "/Cargo.toml", "/LICENSE", "/README.md"]

[dependencies]
clap = { version = "4", features = ["derive"] }
i3m = { version = "0.34.1", path = "../i3m" }
i3m_engine_core_base = { version = "0.21.2", path = "../editor" }
