[package]
name = "I3M-Engine-Core_base"
license = "MIT"
version = "0.21.1"
authors = ["Dedan Okware <softengdedan@gmail.com>"]
edition = "2021"
rust-version = "1.72"
description = "A scene editor for Fyrox game engine"
homepage = "https://github.com/IThreeM/I3M-Engine-Core"
keywords = ["fyrox", "editor", "rust"]
repository = "https://github.com/IThreeM/I3M-Engine-Core"
readme = "README.md"
include = ["/src/**/*", "/Cargo.toml", "/LICENSE", "/README.md", "/resources/**/*"]

[dependencies]
fyrox = { version = "0.34.1", path = "../fyrox", default-features = false }
lazy_static = "1.4.0"
ron = "0.8.0"
serde = "^1.0.0"
toml = { version = "0.8.10", default-features = false, features = ["parse"] }
strum = "0.26.1"
strum_macros = "0.26.1"
open = "5"
rust-fuzzy-search = "0.1.1"
cargo_metadata = "0.18.1"
serde_json = "1.0.113"
image = { version = "0.25.1", default-features = false, features = ["gif", "jpeg", "png", "tga", "tiff", "bmp"] }
imageproc = "0.25.0"

[features]
default = ["fyrox/default"]
dylib_engine = ["fyrox/dylib"]
