[package]
name = "i3m_engine_core_base"
license = "MIT"
version = "0.21.2"
authors = ["Dedan Okware <softengdedan@gmail.com>"]
edition = "2021"
rust-version = "1.72"
description = "A scene editor for IThreeM game engine"
keywords = ["i3m", "editor", "rust"]
repository = "https://github.com"
readme = "README.md"
include = ["/src/**/*", "/Cargo.toml", "/LICENSE", "/README.md", "/resources/**/*"]

[dependencies]
i3m = { version = "0.34.0", default-features = false }
lazy_static = "1.4.0"
ron = "0.8.0"
serde = "^1.0.0"
toml = { version = "0.8.10", default-features = false, features = ["parse"] }
strum = "0.26.1"
strum_macros = "0.26.1"
open = "5"
rust-fuzzy-search = "0.1.1"
cargo_metadata = "0.18.1"
serde_json = "1.0.113"
image = { version = "0.25.1", default-features = false, features = ["gif", "jpeg", "png", "tga", "tiff", "bmp"] }
imageproc = "0.25.0"

[features]
default = ["i3m/default"]
dylib_engine = ["i3m/dylib"]
