[package]
name = "i3m-animation"
version = "1.0.0"
authors = ["Dedan Okware <softengdedan@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Flexible Animation System"
keywords = ["animation", "game"]
categories = ["game-development"]
include = ["/src/**/*", "/Cargo.toml", "/LICENSE", "/README.md"]
homepage = "https://ithreem.com"
documentation = "https://docs.rs/i3m-animation"
repository = "https://github.com/IThreeM/I3M-Engine-Core"
readme = "README.md"
rust-version = "1.72"

[dependencies]
i3m-core = "1.0.0"
strum = "0.26.1"
strum_macros = "0.26.1"
fxhash = "0.2.1"
spade = "2.1.0"
