[package]
name = "i3m-animation"
version = "0.1.0"
authors = ["Dedan Okware <softengdedan@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Flexible Animation System"
keywords = ["animation", "game"]
categories = ["game-development"]
include = ["/src/**/*", "/Cargo.toml", "/LICENSE", "/README.md"]
documentation = "https://docs.rs/i3m-animation"
readme = "README.md"
rust-version = "1.72"

[dependencies]
i3m-core = "0.1.0"
strum = "0.26.1"
strum_macros = "0.26.1"
fxhash = "0.2.1"
spade = "2.1.0"
