[package]
name = "i3m-graph"
version = "0.1.0"
authors = ["Dedan Okware <softengdedan@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Graph management crate for the IThreeM engine"
keywords = ["graph", "prefab"]
categories = ["game-development"]
include = ["/src/**/*", "/Cargo.toml", "/LICENSE"]
documentation = "https://docs.rs/i3m-graph"
rust-version = "1.72"

[dependencies]
i3m-core = "0.1.0"
i3m-resource = "1.0.0"
fxhash = "0.2.1"
