[package]
name = "i3m-graph"
version = "0.1.0"
authors = ["Dedan Okware <softengdedan@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Graph management crate for the IThreeM engine"
keywords = ["graph", "prefab"]
categories = ["game-development"]
include = ["/src/**/*", "/Cargo.toml", "/LICENSE"]
documentation = "https://docs.rs/i3m-graph"
rust-version = "1.72"

[dependencies]
fxhash = "0.2.1"
i3m-core = { version = "0.1.0", path = "../i3m-core" }
i3m-resource = { version = "0.1.0", path = "../i3m-resource" }
