[package]
name = "i3m-resource"
version = "0.1.0"
authors = ["Dedan Okware <softengdedan@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Asset management crate for the IThreeM engine"
keywords = ["asset", "resource"]
categories = ["game-development"]
include = ["/src/**/*", "/Cargo.toml", "/LICENSE"]
documentation = "https://docs.rs/i3m-resource"
rust-version = "1.72"

[dependencies]
i3m-core = "0.1.0"
fxhash = "0.2.1"
ron = "0.8.0"
serde = { version = "1", features = ["derive"] }
walkdir = "2.3.2"
rayon = "1.7.0"
