[package]
name = "i3m-scripts"
version = "1.0.0"
authors = ["Dedan Okware <softengdedan@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Standard scripts for the IThreeM engine"
keywords = ["asset", "resource"]
categories = ["game-development"]
include = ["/src/**/*", "/Cargo.toml", "/LICENSE"]
homepage = "https://"
documentation = "https://docs.rs/i3m-scripts"
repository = "https://github.com/IThreeM/I3M-Engine-Core"
rust-version = "1.72"

[dependencies]
i3m = "0.34.1"
