[package]
name = "i3m-sound"
version = "0.35.0"
authors = ["Dedan Okware <softengdedan@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Sound library for games."
keywords = ["sound", "game", "hrtf", "binaural", "reverb"]
categories = ["game-development", "multimedia::audio"]
include = ["/src/**/*", "/Cargo.toml", "/LICENSE", "/README.md", "/examples/*"]
homepage = "https://"
documentation = "https://docs.rs/i3m-sound"
repository = "https://github.com/IThreeM/I3M-Engine-Core"
readme = "README.md"
rust-version = "1.72"

[dependencies]
i3m-core = "0.1.0"
i3m-resource = "1.0.0"
lewton = "0.10.2"
ogg = "0.8.0"
hrtf = "0.8.0"
hound = "3.4.0"
strum = "0.26.1"
strum_macros = "0.26.1"
tinyaudio = "0.1.2"
serde = { version = "1", features = ["derive"] }
