[package]
name = "i3m-sound"
version = "0.35.0"
authors = ["Dedan Okware <softengdedan@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Sound library for games."
keywords = ["sound", "game", "hrtf", "binaural", "reverb"]
categories = ["game-development", "multimedia::audio"]
include = ["/src/**/*", "/Cargo.toml", "/LICENSE", "/README.md", "/examples/*"]
documentation = "https://docs.rs/i3m-sound"
readme = "README.md"
rust-version = "1.72"

[dependencies]
lewton = "0.10.2"
ogg = "0.8.0"
hrtf = "0.8.0"
hound = "3.4.0"
strum = "0.26.1"
strum_macros = "0.26.1"
tinyaudio = "0.1.2"
serde = { version = "1", features = ["derive"] }
i3m-resource = { version = "0.1.0", path = "../i3m-resource" }
i3m-math = { version = "0.1.0", path = "../i3m-math" }
i3m-core = { version = "0.1.2", path = "../i3m-core" }
