[package]
name = "i3m"
version = "1.0.0"
authors = ["Dedan Okware <softengdedan@gmail.com>", "IThreeM Engine Contributors"]
edition = "2021"
license = "MIT"
description = "Feature-rich, easy-to-use, 2D/3D game engine with a scene editor. Like Godot, but in Rust."
keywords = ["sound", "game", "engine", "3d", "gui"]
categories = ["game-engines", "graphics", "gui", "rendering", "wasm"]
include = ["/src/**/*", "/Cargo.toml", "/LICENSE", "/README.md"]
homepage = "https://ithreem.com"
documentation = "https://docs.rs/i3m"
repository = "https://github.com/IThreeM/I3M-Engine-Core"
readme = "README.md"
rust-version = "1.72"

[features]
default = ["i3m-impl"]
dylib = ["i3m-dylib"]
gltf = ["i3m-impl/gltf", "i3m-dylib/gltf"]
mesh_analysis = ["i3m-impl/mesh_analysis", "i3m-dylib/mesh_analysis"]
gltf_blend_shapes = ["i3m-impl/gltf_blend_shapes", "i3m-dylib/gltf_blend_shapes"]

[dependencies]
i3m-impl = { version = "1.0.0", optional = true }
i3m-dylib = { version = "1.0.0", optional = true }
