[package]
name = "fyrox-template-core"
version = "0.11.0"
edition = "2021"
authors = ["Dedan Okware <softengdedan@gmail.com>"]
license = "MIT"
description = "Project template generator for Fyrox engine"
keywords = ["fyrox", "game", "project"]
categories = ["game-development"]
include = ["/src/**/*", "/Cargo.toml", "/LICENSE", "/README.md"]
homepage = "https://ithreem.com"
repository = "https://github.com/IThreeM/I3M-Engine-Core"
readme = "README.md"
rust-version = "1.72"

[dependencies]
uuid = { version = "1", features = ["v4"] }
convert_case = "0.6.0"
toml = "0.8.10"
toml_edit = "0.22.6"
regex = "1.7.3"