[package]
name = "fyrox-template"
version = "0.11.0"
edition = "2021"
authors = ["Dedan Okware <softengdedan@gmail.com>"]
license = "MIT"
description = "Command line interface for project template generator for Fyrox engine"
keywords = ["fyrox", "game", "project"]
categories = ["game-development"]
include = ["/src/**/*", "/Cargo.toml", "/LICENSE", "/README.md"]
homepage = "https://ithreem.com"
repository = "https://github.com/IThreeM/I3M-Engine-Core"
readme = "README.md"
rust-version = "1.72"

[dependencies]
fyrox-template-core = { version = "0.11.0", path = "../template-core" }
clap = { version = "4", features = ["derive"] }